menu pages terminees

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <div class="grid">
             <h2 class="restaurants__title">Restaurants</h2>
             <div class="restaurants__wrap">
-                <article class="card">
-                    <a href="./restaurants/menu1.html"><img class="card__img" src="./assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
+                <a class="card" href="./restaurants/menu1.html">
+                    <img class="card__img" src="./assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
                     <span class="card__nouveau">Nouveau</span>
                     <h3 class="card__title">La palette du goût</h3>
                     <p class="card__subtitle">Ménilmontant</p>
@@ -103,10 +103,10 @@
                         </linearGradient>
                         </svg>
                     </label> -->
-                    <span class="card__icon"></span></a>
-                </article> 
-                <article class="card">
-                    <a href="./restaurants/menu2.html"><img class="card__img" src="./assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
+                    <span class="card__icon"></span>
+                </a> 
+                <a class="card" href="./restaurants/menu2.html">
+                    <img class="card__img" src="./assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
                     <span class="card__nouveau">Nouveau</span>
                     <h3 class="card__title">La note enchantée</h3>
                     <p class="card__subtitle">Charonne</p>
@@ -116,10 +116,10 @@
                         <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
                         </svg>
                     </label> -->
-                    <span class="card__icon"></span></a>
-                </article>
-                <article class="card">
-                    <a href="./restaurants/menu3.html"><img class="card__img" src="./assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
+                    <span class="card__icon"></span>
+                </a>
+                <a class="card" href="./restaurants/menu3.html">
+                    <img class="card__img" src="./assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
                     <h3 class="card__title">À la française</h3>
                     <p class="card__subtitle">Cité Rouge</p>
                     <!-- <input class="checkbox" id="checkbox2" type="checkbox">
@@ -128,10 +128,10 @@
                         <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
                         </svg>
                     </label> -->
-                    <span class="card__icon"></span></a>
-                </article>
-                <article class="card">
-                    <a href="./restaurants/menu4.html"><img class="card__img" src="./assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
+                    <span class="card__icon"></span>
+                </a>
+                <a class="card" href="./restaurants/menu4.html">
+                   <img class="card__img" src="./assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
                     <h3 class="card__title">Le délice des sens</h3>
                     <p class="card__subtitle">Folie-Méricourt</p>
                     <!-- <input class="checkbox" id="checkbox3" type="checkbox">
@@ -140,8 +140,8 @@
                         <path class="heart" d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z" fill="none" stroke="#101010"/>
                         </svg>
                     </label> -->
-                    <span class="card__icon"></span></a>
-                </article> 
+                    <span class="card__icon"></span>
+                </a> 
             </div>
         </div>
     </section>
