--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -24,9 +24,12 @@
         </div>
     </header>
     
+
+        <!--***** Le Menu *****-->
+
     <main class="menuWrapper">
         <div class="menuWrapper__title">
-            <h2 class="menuWrapper__title--titre">La palette du goût
+            <h2 class="menuWrapper__title--titre">La palette du goût</h2>
             <input class="checkbox" id="checkbox" type="checkbox">
             <label for="checkbox">
                 <svg class="menuWrapper__title--icon" viewBox="0 0 22 21" xmlns="http://www.w3.org/2000/svg">
@@ -36,7 +39,7 @@
                     <stop offset="100%" stop-color="var(--btn-purple-light)" />
                 </linearGradient>
                 </svg>
-            </label></h2>
+            </label>
         </div>
 
         <div class="menuWrapper__box">
@@ -56,10 +59,10 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
+                        <h4>Foie gras de canard mi-cuit</h4>
+                        <p>Et ses copeaux de truffe noire</p>
                     </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <div class="menuCard__box--price">35€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -68,10 +71,10 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
+                        <h4>Œuf au plat</h4>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <div class="menuCard__box--price">20€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -85,10 +88,10 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
+                        <h4>Filet de bœuf aux herbes</h4>
+                        <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <div class="menuCard__box--price">40€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -97,10 +100,10 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
+                        <h4>Parmentier de queue de bœuf</h4>
+                        <p>À la truffe noire sur sa purée de panais</p>
                     </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <div class="menuCard__box--price">35€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -109,10 +112,10 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
+                        <h4>Filet de turbot</h4>
+                        <p>Aux agrumes</p>
                     </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <div class="menuCard__box--price">44€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -126,10 +129,10 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
+                        <h4>Paris-Brest</h4>
+                        <p>Revisité</p>
                     </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <div class="menuCard__box--price">18€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -138,10 +141,10 @@
             <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
+                        <h4>Macaron au chocolat d'exception</h4>
+                        <p>Et glace à la vanille de Madagascar</p>
                     </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <div class="menuCard__box--price">22€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -150,10 +153,10 @@
             <article class="menuCard even">
                 <div class="menuCard__box">
                     <div class="menuCard__box--text">
-                        <h4>Fricassée d'escargots</h4>
-                        <p>Au piment d'Espelette</p>
+                        <h4>Mousse au chocolat</h4>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
-                    <div class="menuCard__box--price">25€</div>
+                    <div class="menuCard__box--price">23€</div>
                 </div>
                 <div class="menuCard__selectBtn">
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
@@ -162,7 +165,7 @@
             
 
         </div>
-        <a class="btn__commander" href="#restaurants">Commander</a>
+        <a class="btn__commander" href="">Commander</a>
         <footer class="footer">
             <div class="grid">
                 <h4 class="footer__title">ohmyfood</h4>
