--- a/restaurants/merci.html
+++ b/restaurants/merci.html
@@ -23,9 +23,54 @@
             <img class="nav__logo" src="../assets/images/logo/ohmyfood@2x.svg" alt="logo oh my food">
         </div>
     </header>
-    
-
-
+    <main class="menuWrapper">
+        <div class="menuWrapper__title">
+            <h2 class="menuWrapper__title--titre">A Bientôt</h2>
+        </div>
+        <div class="menuWrapper__box">
+            <h3 class="menuWrapper__box--title">Votre commande ce prepare<span class="menuWrapper__box--borderLeft"></span></h3>
+            <article class="menuCard even">
+                <div class="menuCard__box">
+                    <div class="menuCard__box--text">
+                        <h4>Œuf au plat</h4>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                    <div class="menuCard__box--price">20€</div>
+                </div>
+                <div class="menuCard__selectBtn">
+                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
+                </div>
+            </article>
+            <article class="menuCard uneven">
+                <div class="menuCard__box">
+                    <div class="menuCard__box--text">
+                        <h4>Filet de bœuf aux herbes</h4>
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                    </div>
+                    <div class="menuCard__box--price">40€</div>
+                </div>
+                <div class="menuCard__selectBtn">
+                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
+                </div>
+            </article>        
+            <article class="menuCard even">
+                <div class="menuCard__box">
+                    <div class="menuCard__box--text">
+                        <h4>Paris-Brest</h4>
+                        <p>Revisité</p>
+                    </div>
+                    <div class="menuCard__box--price">18€</div>
+                </div>
+                <div class="menuCard__selectBtn">
+                    <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
+                </div>
+            </article>
+        </div>
+        <div class="menuWrapper__box">
+            <h3 class="menuWrapper__box--title">Total de <span class="menuWrapper__box--borderLeft"></span></h3>
+            <div class="menuCard__box--price">78€</div>
+        </div>
+        <a class="btn__commander" href="../index.html">Retour</a>
         <footer class="footer">
             <div class="grid">
                 <h4 class="footer__title">ohmyfood</h4>
